[metadata]
name = reorientbot
version = 1.0.0
author = Kentaro Wada
author_email = www.kentaro.wada@gmail.com
url = https://github.com/wkentaro/reorientbot
description = ReorientBot: Learning Object Reorientation for Specific-Posed Placement
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options.entry_points]
console_scripts =
    urdf_view = reorientbot.cli.urdf_view:main

[flake8]
exclude = .?*, src/
ignore = E741, H238, W503, W504, E203
